Change java version to 8